--- a/troli.html
+++ b/troli.html
@@ -150,9 +150,9 @@
   <button id="rejtettGomb" title="Az oldal tetejére">rejtett</button> 
 </div>
 <footer class="text-center py-3">Források:
-    <img src="wikiindexico.png">/<a href="https://hu.wikipedia.org/wiki/Trolibusz" target="_blank">Trolibusz</a>
+    <img src="wikiindexico.png" alt="">/<a href="https://hu.wikipedia.org/wiki/Trolibusz" target="_blank">Trolibusz</a>
     és
-    <img src="wikiindexico.png">/<a href="https://hu.wikipedia.org/wiki/Budapest_trolibuszvonal-hálózata" target="_blank">Budapest trolibusz-hálózata</a>
+    <img src="wikiindexico.png" alt="">/<a href="https://hu.wikipedia.org/wiki/Budapest_trolibuszvonal-hálózata" target="_blank">Budapest trolibusz-hálózata</a>
 </footer>
 
 </body>
